lcs-web (2.4.9~3) Lcs; urgency=low

  [ Jean-Luc Chretien ]
  * Modify lcs/logout.php with logout spip ajax request
  * Add first version of lcs-lenny2squeeze
  * Fix a typo erreor in doc/index.php

  [ Philippe LECLERC ]    
  * Change the test status of a module in gestpack.sh

  [ Jean-Luc Chretien ]
  * Fix bug in createmaildir.sh and mkhdir.sh
  * Add test on folder Profile in open_session function 
  * Fix bug in setup_keys.php : Replace in js mb_substr by substr
  * Add function isRight in LcSe.pm
  * Fix special char in ldap_cleaner.php, del_group_user.php, add_group.php
  * Replace deprecated $HTTP_POST_FILES by $_FILES 
  * Add adminse3 in searchAndDelete.pl

  [ Franck Molle]
  * Modify assist.sh for LCS and SE3

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 05 Jan 2012 10:52:25 +0100

lcs-web (2.4.8.2) Lcs; urgency=low

  * Fix bug in createmaildir.sh

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 24 Jun 2011 09:56:48 +0200

lcs-web (2.4.8.1) Lcs; urgency=low

  [ Jean-Luc Chrétien ]
  * Fix charset in Admin/edit_params.php 
  * Fix bug in import comptes on scripts/import_comptes.php

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 17 Jun 2011 17:26:51 +0200

lcs-web (2.4.8) Lcs; urgency=low

  [ Jean-Luc Chrétien ]
  * Modify lcs-etch2lenny script
  * Add a set of pics in Annu/images
  * Fix rights on skel user Profile in mkhdir.sh 
  * Add test if lcs-deskto is activate and browser is not ie5 or ie6 in lcs/index.php
  * Update and synchronize with SE3 scripts : Import Sconet
  * Add chg_gidNumber.sh in /usr/share/lcs/scripts
  * Replace deprecated PHP 5.3 functions
  * Don't allow reauthentication if already authenticate in auth.php
  * Rename function search_people_trash to search_people_trash_lcs 
  * Modify mkTicket.rb to generate CAS ticket with gem rubycas-server
  * Fix make replica config in mkSlapdConf.sh for Etch or Lenny...
  * Fix typo in user_lcs.inc.php