@@ -4,6 +4,7 @@ lcs-web (2.4.9~3) Lcs; urgency=low
   * Modify lcs/logout.php with logout spip ajax request
   * Add first version of lcs-lenny2squeeze
   * Fix a typo erreor in doc/index.php
+  * Fix bug in Annu/add_group_right.php
 
   [ Philippe LECLERC ]    
   * Change the test status of a module in gestpack.sh
@@ -20,7 +21,7 @@ lcs-web (2.4.9~3) Lcs; urgency=low
   [ Franck Molle]
   * Modify assist.sh for LCS and SE3
 
- -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 05 Jan 2012 10:52:25 +0100
+ -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 05 Jan 2012 14:58:58 +0100
 
 lcs-web (2.4.8.2) Lcs; urgency=low
 
